--- a/test/nodejabatest/index.html
+++ b/test/nodejabatest/index.html
@@ -30,6 +30,12 @@ limitations under the License. -->
     <h1>score</h1>
     <p id="score">0</p>
 
+    <!-- 게임시작, 중지, 재시작 버튼 -->
+    <button class="btn1">Start Game</button>
+    <button class="btn2">Pause Game</button>
+    <button class="btn3">Restart Game</button>
+
+
     <div id="liveView" class="videoView">
       <button id="webcamButton" class="mdc-button mdc-button--raised">
         <span class="mdc-button__ripple"></span>
@@ -42,3 +48,4 @@ limitations under the License. -->
       </div>
     </div>
   </section>
+</body>
