feat: 그랩 이펙트 추가 (#4)

--- a/test/nodejabatest/index.html
+++ b/test/nodejabatest/index.html
@@ -12,10 +12,14 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License. -->
 <link href="style.css" rel="stylesheet">
+<!-- effect 관련 css -->
+<link href="effect.css" rel="stylesheet">
 
 <!-- <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
 <script src="main.js" type="module" crossorigin="anonymous"></script>
+<!-- effect 관련 js -->
+<script src="effect.js" type="module" crossorigin="anonymous"></script>
 
 <body>
   <h1>Hand landmark detection using the MediaPipe HandLandmarker task</h1>
