전반적 성능개선 및 리팩토링(#9)

--- a/test/nodejabatest/index.html
+++ b/test/nodejabatest/index.html
@@ -14,23 +14,18 @@ limitations under the License. -->
 <link href="style.css" rel="stylesheet">
 <!-- effect 관련 css -->
 <link href="effect.css" rel="stylesheet">
+<link href="node.css" rel="stylesheet">
 
 <!-- <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
 <script src="main.js" type="module" crossorigin="anonymous"></script>
-<!-- effect 관련 js -->
-<script src="effect.js" type="module" crossorigin="anonymous"></script>
 
 <body>
-  <h1>Hand landmark detection using the MediaPipe HandLandmarker task</h1>
-
+  
   <section id="demos" class="invisible">
     
 
-    <h2>Demo: Webcam continuous hands landmarks detection</h2>
-    <p>Hold your hand in front of your webcam to get real-time hand landmarker detection.</br>Click <b>enable webcam</b> below and grant access to the webcam if prompted.</p>
-
-    <button id="gameStartButton">Start Game</button>
+    
     <h1>score</h1>
     <p id="score">0</p>
 
