--- a/test/nodejabatest/index.html
+++ b/test/nodejabatest/index.html
@@ -18,7 +18,8 @@ limitations under the License. -->
 
 <!-- <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
-<script src="main.js" type="module" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js" crossorigin="anonymous"></script>
+<script src="main.js" type="module"></script>
 
 <body>
   
