--- a/test/websocketserver-test/front/chat_score-test.html
+++ b/test/websocketserver-test/front/chat_score-test.html
@@ -47,20 +47,20 @@
         document.getElementById("chatBox").innerHTML += `${appendText}\n`;
       });
 
-      //   scoreSocket.on("score", (data) => {
-      //     const appendText = JSON.stringify(data);
-      //     document.getElementById("chatBox").innerHTML += `${appendText}\n`;
-      //   });
+      scoreSocket.on("score", (data) => {
+        const appendText = JSON.stringify(data);
+        document.getElementById("chatBox").innerHTML += `${appendText}\n`;
+      });
 
-      //   let score = 0;
+      let score = 0;
 
-      //   setInterval(function () {
-      //     const data = {
-      //       score: score,
-      //     };
-      //     scoreSocket.emit("score", data);
-      //     score++;
-      //   }, 1000);
+      setInterval(function () {
+        const data = {
+          score: score,
+        };
+        scoreSocket.emit("score", data);
+        score++;
+      }, 1000);
     </script>
   </head>
   <body>
